# yt-dlp-tasker

./: .gitignore  Cargo.toml  config.toml
src/: main.rs  serde_helper.rs
