[package]
name = "yt-dlp-tasker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
basic-toml = "0.1.9"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking" ,"http2", "charset"] }
serde = { version = "1.0.197", features = ["derive"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
